--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Says</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <h1> Hai 30 secondi per memorizzare questi 5 numeri: </h1>
+        <h2 id="randomNumbers"></h2>
+    </div>
 
     <script src="main.js"></script>
 </body>
