Added prompt User

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1> Hai 30 secondi per memorizzare questi 5 numeri: </h1>
+        <h1 id="description"> Hai 30 secondi per memorizzare questi 5 numeri: </h1>
         <h2 id="randomNumbers"></h2>
     </div>
 
