Added refresh button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <h1 id="description"> Hai 30 secondi per memorizzare questi 5 numeri: </h1>
         <h2 id="randomNumbers"></h2>
+        <button id="refresh">Riprova</button>
     </div>
 
     <script src="main.js"></script>
